# icy

./: .gitignore  main.py  pyproject.toml
data/: Final_Plots_Datasets - Total_loss (not normalized; runoff + ice discharge.csv  GRACE_GMB_basin_gigatons_month_mass_balance.csv  Mankoff_region_D_Gt_month-1_ice_discharge_avg.csv  RACMO_runoff_gigatons_per_month.csv  RACMOdataset_monthly.xlsx - T(air 2m above surface) avg (K).csv  RACMOdataset_monthly_PRECIP_sum_(Gt).csv  averaged_GRACE_GMB_basin_gigatons_month_mass_balance.csv  averaged_GRACE_GMB_basin_gigatons_month_mass_balance.csv:Zone.Identifier  grace_diffs_pd_describe.csv  new_sw_monthly_resampled.csv  sw_monthly_resampled.csv  t_2m_pd_describe.csv  total_loss_pd_describe.csv
data/final_data/: Final_Plots_Datasets - GRACE_diffs ((P-R-ID)-Grace diff).csv  Final_Plots_Datasets - T2m(avg,K).csv  Final_Plots_Datasets - Total_loss (not normalized; runoff + ice discharge.csv
scripts/: browsing_dfs.py  calculations.py  debug.py  flash_talk.py  indiv_plots.py  indiv_prelim_plots.py  stats_table.py
src/: create_big_df.py  plot_styling.py
