[project]
name = "icy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
# docs = ["mkdocs-material",]  # 9-30-25 I tried to do 'uv pip install -e “.[docs]”' but it said "error: Failed to parse: `“.[docs]”`
#   Caused by: Expected package name starting with an alphanumeric character, found `“`
# “.[docs]”
# ^"
